k8s/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: social-service
  namespace: prod
spec:
  selector:
    app: social
  ports:
    - name: grpc
      protocol: TCP
      port: 3093
      targetPort: 3093
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: social-mysql-master-service
  namespace: prod
spec:
  selector:
    app: social
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: social-phpmyadmin-service
  namespace: prod
spec:
  selector:
    app: social
  ports:
    - protocol: TCP
      port: 3080
      targetPort: 80
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: social-redis-service
  namespace: prod
spec:
  selector:
    app: social
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: social-redis-gui-service
  namespace: prod
spec:
  selector:
    app: social
  ports:
    - protocol: TCP
      port: 3081
      targetPort: 8081
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: social-fluent-bit-service
  namespace: prod
spec:
  selector:
    app: social
  ports:
    - name: tcp
      protocol: TCP
      port: 24220
      targetPort: 24224
    - name: udp
      protocol: UDP
      port: 24220
      targetPort: 24224
  type: NodePort
